# fit-vut-ial_2017_du2

./: CMakeLists.txt  readme.md
c016/: c016-test  c016.c
c016/advanced tests/: Makefile  c016-advanced-test.c  c016-advanced-test.output  c016.sh
c016/tests/: torture_me.sh
c016/tests/c016/: c016-advanced-test.c  diff-advanced.txt  diff-standard.txt
c016/tests/c401/: diff-advanced.txt  diff-standard.txt
c016/tests/c402/: diff-advanced.txt
c402/: c402-test
moss/: adka402.c  c402-j.c  moss.sh  neznamy.c  run_moss.txt
tests/c016/: Makefile  c016-advanced-test  c016-test  c016.c  c016.h  valgrind.txt
tests/c401/: c401-advanced-test  c401-test  c401.c  c401.h  valgrind.txt
tests/c402/: c402-advanced-test  c402.c  c402.h  diff-standard.txt  valgrind.txt
